Update dependencies and import statements

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,10 @@ install_requires =
     numpy
     scipy
     matplotlib
+    seaborn
+    jupyter
+    notebook
+    ipython
 
 python_requires = >=3.8
 include_package_data = True
