--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
-    Topic :: Scientific/Engineering :: Course
+    Topic :: Education
 project_urls =
     Bug Tracker = https://github.com/GuignardLab/Centuri-Course/issues
     Documentation = https://guignardlab.github.io/CenTuri-Course/
