--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ license = MIT
 license_files = LICENSE
 classifiers =
     Development Status :: 4 - Beta
-    Intended Audience :: Students
+    Intended Audience :: Education
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
